--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,35 @@
-/* write your override styles here */
+/* Override for tag-1 */
+#wall .tag-1 {
+    display: none;
+  }
+  
+  /* Override for tag-2 */
+  #wall #tag-2 {
+    display: none;
+  }
+  
+  /* Override for tag-3 */
+  #wall #tag-3.slick.wicked {
+    display: none;
+  }
+  
+  /* Override for tag-4 */
+  #wall #tag-4 {
+    display: none;
+  }
+  
+  /* Override for tag-5 */
+  #wall .parent #tag-5.slick {
+    display: none;
+  }
+  
+  /* Override for tag-6 */
+  #wall div.parent div:last-child div#tag-6 {
+    display: none;
+  }
+  
+  /* Override for tag-7 */
+  body div#wall div.parent div > #tag-7.slick {
+    display: none;
+  }
+  
